site/css/kbp-internal.css
body {
	display: grid;
	width: 100vw;
	grid-template-areas:
		"menu content"
		"footer content";
	grid-gap: 1rem;
	grid-template-columns: 12rem auto;
}

header {
	grid-area: menu;
	width: 12rem;
	position: fixed;
	top: 0;
	left: 0;
}

header nav {
	display: block;
	font-size: .5rem;
	float: left;
	clear: left;
}

header nav ul ul {
	padding-left: 1rem;
}

header nav li a {
	padding-right: .5rem;
}

header nav li ul li {
	font-size: 1em;
}

header nav li ul li a {
	padding-top: 0;
	padding-bottom: 0;
}

/*grid-template-columns: minmax(5rem, auto) auto;*/
/*grid-template-columns: 30rem minmax(5rem, auto);*/

main {
    width: calc(100vw - 13rem);
    grid-column: 2;
    display: grid;
    grid-template-columns: 20vw 30rem auto;
    grid-gap: 1rem;
}

main h1 {
    border-top: 1rem solid black;
    margin-top: 0;
}

article {
    grid-column: 2 / span 2;
}

article .content {
    width: 30rem;
}

.blog h1 {
    grid-column: 2 / span 2;
}

.blogPost {
    grid-column: 1 / span 2;
    display: grid;
    grid-template-columns: 20vw 30rem;
    grid-template-rows: 2rem auto;
    grid-gap: 1rem;
}

.blogPost h1 {
    grid-column: 2 / span 2;
    grid-row: 1;
}

.blogPost h2 {
    grid-column: 2 / span 2;
    grid-row: 1;
    margin: 0;
    align-self: end;
    font-size: 1.2rem;
}

.blogPost h2 a {
    color: #000000;
    text-decoration: none;
}

.blogPost .metadata {
    grid-column: 1;
    grid-row: 1;
    text-align: right;
    align-self: end;
}

.blogPost .content {
    grid-row: 2;
    grid-column: 2 / span 2;
    align-self: start;
}

.gallery article {
    grid-row: 2;
}

.slideshow {
    grid-column: 1 / span 3;
}

.slideshowControls {
    margin-left: calc(20vw + 1rem);
    width: calc(100% - 20vw - 1rem);
}

.slide img {
    max-height: 75vh;
}

figure {
	margin: 0;
}

figcaption {
	font-size: .9rem;
	color: rgba(0,0,0, .7);
}

figcaption .title {
	display: block;
	font-style: italic;
}

.buyPrint {
	font-family: "din-2014", sans-serif;
	font-weight: 600;
	text-transform: uppercase;
	padding: 0 .2rem;
	margin-left: .5rem;
}

img.left {
	width: 50%;
	float: left;
	margin: 0 1rem 1rem 0;
}

footer {
	right: auto;
	left: 0;
	width: 12rem;
	z-index: 1;
}

footer nav ul {
	padding: 0;
	margin: 0;
}

li#instagram {
	width: 6rem;
}

li#instagram a {
	padding: .5rem .5rem .5rem 2rem;
	background-position: 3rem center;
}

/** Mailchimp Signup Form **/
#mc_embed_signup_scroll {
	background: #f4f4f4;
	padding: 1rem;
	display: grid;
	grid-template-areas:
		"title . "
		"text text"
		"email submit";
}

#mc_embed_signup_scroll h2 {
	grid-area: title;
	margin: 0;
}

#mc_embed_signup_scroll p {
	grid-area: text;
}

.mc-field-group {
	grid-area: email;
	display: grid;
	grid-template-areas: "email";
}

.mc-field-group label {
	grid-area: email;
	padding: 1rem .5rem;
	opacity: .7;
	transition: .2s linear;
}

.mc-field-group input {
	grid-area: email;
	border: 1px solid #dddddd;
	padding: 1rem .5rem;
	background-color: #ffffff;
	font-family: inherit;
	font-size: inherit;
	margin: 0;
	align-self: stretch;
}

.mc-field-group input:focus + label {
	font-size: .7rem;
	margin-top: -.7rem;
}

#mc-embedded-subscribe {
	grid-area: submit;
	align-self: stretch;
}

@media only screen and (max-width: 850px) {
    body {
    	grid-template-areas:
    		"menu footer"
    		"content content";
    	grid-template-columns: auto;
    	grid-gap: 0;
    }

    header {
    	width: 100vw;
    	z-index: 1;
    	background: black;
    }

    header nav {
    	position: fixed;
    	top: 0;
    	left: 0;
    }

    header nav>ul {
    	display: none;
    	background: white;
    }

    header h1 {
    	width: 80vw;
    	text-align: center;
    	margin: 0 3rem 0 3rem;
    	font-size: 3vw;
    	height: 3rem;
    	line-height: 3rem;
    }

    header h1 span {
    	float: none;
    	padding: 0 .3rem;
    }

    main {
        display: block;
    	width: 100vw;
    	margin-top: 3rem;
    }

    footer {
    	grid-area: footer;
    	position: fixed;
    	top: 0;
    	left: auto;
    	right: 0;
    	width: 3rem;
    }

    article {
        padding: 0 1rem;
    }

    main h1 {
        border: none;
    }

    article .content {
        width: auto;
    }

    .blog h1 {
        padding: 0 1rem;
    }

    .blogPost {
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: 2rem 1rem auto;
        grid-gap: 1rem;
    }

    .blogPost h1 {
        grid-column: 1;
        grid-row: 1;
    }

    .blogPost h2 {
        grid-column: 1;
        grid-row: 1;
    }

    .blogPost .metadata {
        grid-column: 1;
        grid-row: 2;
        text-align: left;
    }

    .blogPost .content {
        grid-column: 1;
        grid-row: 3;
    }

    #navToggle {
    	display: block;
    	height: 3rem;
    	width: 3rem;
    	padding: .3rem;
    	background: black;
    	color: white;
    	box-sizing: border-box;
    	font-size: 1rem;
    	text-indent: -999em;
    	position: relative;
    }

    #navToggle:after {
    	content: "\2630";
    	position: absolute;
    	top: 0;
    	left: 0;
    	display: block;
    	height: 3rem;
    	width: 3rem;
    	text-indent: 0;
    	text-align: center;
    	font-size: 2rem;
    }

    .slideshow {
    	margin: 0;
    }

    .slideshowControls {
    	justify-content: center;
    }

    .slide figcaption {
    	padding: 0 1rem;
    }

    li#instagram {
    	background: black;
    	color: white;
    	width: 3rem;
    }

    li#instagram a {
    	filter: brightness(1000);
    	padding: 0;
    	background-position: center;
    }
}

